Add remove and update functionality
